welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: not found: value tab
  return tab(1)
         ^Array1:20: warning: enclosing method run has result type Unit: return value discarded
  return tab(1)
  ^